objects/Pagamento__c.object
<CustomObject>
    <description>Onda 02 Projeto - Objeto para realizar Pagamentos de Verbas (Contratos, Eventos, Ações Promocionais, Treinamentos)</description>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Rating</field>
                <operation>equals</operation>
                <value>Cliente, Cliente atendido, Cliente com contrato</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Cliente cadastrado no JDE, Cliente cadastrado no CRM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pagamentos</relationshipLabel>
        <relationshipName>Pagamentos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conta_ME__c</fullName>
        <label>Conta ME</label>
        <summaryFilterItems>
            <field>Pagamento_da_Verba__c.Sistema__c</field>
            <operation>equals</operation>
            <value>ME</value>
        </summaryFilterItems>
        <summaryForeignKey>Pagamento_da_Verba__c.Pagamento__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Conta_SCV__c</fullName>
        <description>Contar todos os registros SCV</description>
        <label>Conta SCV</label>
        <summaryFilterItems>
            <field>Pagamento_da_Verba__c.Sistema__c</field>
            <operation>equals</operation>
            <value>SCV</value>
        </summaryFilterItems>
        <summaryForeignKey>Pagamento_da_Verba__c.Pagamento__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Conta_itens_de_verba__c</fullName>
        <label>Conta itens de verba</label>
        <summaryForeignKey>Pagamento_da_Verba__c.Pagamento__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Data_do_Pagamento__c</fullName>
        <label>Data do Pagamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emitente__c</fullName>
        <formula>$User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Emitente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forma_de_Pagamento__c</fullName>
        <label>Tipo de Pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deposito em Conta</fullName>
                </value>
                <value>
                    <fullName>Nota de Crédito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MensagemIntegracao__c</fullName>
        <label>MensagemIntegracao</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Observacoes_Complementares__c</fullName>
        <label>Observações Complementares</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Possui_Anexo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possui Anexo?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recebedor__c</fullName>
        <label>Recebedor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Forma_de_Pagamento__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cliente Pai</fullName>
                </value>
                <value>
                    <fullName>Cliente Abertura da RV</fullName>
                    <default>true</default>
                    <label>Cliente Abertura da RV</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sistema__c</fullName>
        <formula>IF( Conta_ME__c  &gt; 0 , &quot;ME&quot;, IF( Conta_SCV__c&gt;0, &quot;SCV&quot;, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sistema</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitante__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solicitante</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pagamentos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enviando para SCV/ME</fullName>
                </value>
                <value>
                    <fullName>Pago</fullName>
                </value>
                <value>
                    <fullName>Aguardando Aprovação</fullName>
                </value>
                <value>
                    <fullName>Cancelado</fullName>
                </value>
                <value>
                    <fullName>Reprovado</fullName>
                </value>
                <value>
                    <fullName>Em preenchimento</fullName>
                    <default>true</default>
                    <label>Em preenchimento</label>
                </value>
                <value>
                    <fullName>Aprovado Integrado</fullName>
                </value>
                <value>
                    <fullName>Erro de Integração</fullName>
                </value>
                <value>
                    <fullName>Em Aberto</fullName>
                </value>
                <value>
                    <fullName>Parcialmente  Pago</fullName>
                </value>
                <value>
                    <fullName>Parcialmente Cancelado</fullName>
                </value>
                <value>
                    <fullName>Pedido Totalmente Faturado</fullName>
                </value>
                <value>
                    <fullName>Pedido Parcialmente Faturado</fullName>
                </value>
                <value>
                    <fullName>Pedido Aberto</fullName>
                </value>
                <value>
                    <fullName>Pedido Totalmente Cancelado</fullName>
                </value>
                <value>
                    <fullName>Pedido Parcialmente Cancelado</fullName>
                </value>
                <value>
                    <fullName>Pedido com Status Indefinido</fullName>
                </value>
                <value>
                    <fullName>Aprovado</fullName>
                </value>
                <value>
                    <fullName>Integrado</fullName>
                </value>
                <value>
                    <fullName>Efetivo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Anexo__c</fullName>
        <label>Tipo de Anexo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nota Fiscal</fullName>
                </value>
                <value>
                    <fullName>Foto</fullName>
                </value>
                <value>
                    <fullName>Arquivo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Volume_Cx__c</fullName>
        <label>Total Volume (CA)</label>
        <summarizedField>Pagamento_da_Verba__c.volume_a_pagar__c</summarizedField>
        <summaryForeignKey>Pagamento_da_Verba__c.Pagamento__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Valor_Total__c</fullName>
        <label>Valor Total (R$)</label>
        <summarizedField>Pagamento_da_Verba__c.valor_a_pagar__c</summarizedField>
        <summaryForeignKey>Pagamento_da_Verba__c.Pagamento__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>identificar_tipo_de_registro_del__c</fullName>
        <formula>IF ($RecordType.DeveloperName = &quot;Dinheiro&quot;, &quot;D&quot;, &quot;C&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>identificar tipo de registro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pagamentoReceber_Tipo_de_Pagamento_del__c</fullName>
        <formula>text(Cliente__r.Receive_Payment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receber Tipo de Pagamento</label>
        <type>Text</type>
    </fields>
    <label>Pagamento</label>
    <nameField>
        <displayFormat>Pagamento-{000000}</displayFormat>
        <label>Número do Pagamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagamentos</pluralLabel>
    <recordTypes>
        <fullName>Bonifica_o_Produtos_Bloqueado</fullName>
        <active>true</active>
        <label>Bonificação (Produtos) - Aprovado</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bonificacao_Produtos</fullName>
        <active>true</active>
        <description>Bonificação (Produtos)</description>
        <label>Bonificação (Produtos)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dinheiro</fullName>
        <active>true</active>
        <description>Dinheiro</description>
        <label>Dinheiro</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dinheiro_Bloqueado</fullName>
        <active>true</active>
        <label>Dinheiro - Aprovado</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CamposObrigatoriosSCV</fullName>
        <active>true</active>
        <description>OBRIGA PREENCHIMENTO DO CAMPOS FORMA DE PAGAMENTO E RECEBEDOR.</description>
        <errorConditionFormula>AND( Sistema__c  = &quot;SCV&quot;, OR(  ISPICKVAL(  Forma_de_Pagamento__c , &quot;&quot;),  ISPICKVAL(Recebedor__c , &quot;&quot;)))</errorConditionFormula>
        <errorMessage>Para sistema SCV o &quot;Tipo de pagamento&quot; e o &quot;Recebedor&quot; são campos obrigatórios.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contagem_sistema</fullName>
        <active>true</active>
        <description>Não deixar um pagamento ter SVs misturadas do ME e SCV</description>
        <errorConditionFormula>Conta_ME__c   &lt;&gt; 0   &amp;&amp;   Conta_SCV__c  &gt;  0    || 
Conta_SCV__c  &lt;&gt;  0 &amp;&amp;  Conta_ME__c   &gt;  0</errorConditionFormula>
        <errorMessage>Não é possível adicionar esse item, devido aos critérios dos itens anteriores. O Tipo de Verba deve ser o mesmo.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Somente_pagamento_dinheiro_deposito_cont</fullName>
        <active>true</active>
        <description>Somente para clientes com a opÇão de Somente Pagamento
Dinheiro deposito em conta.</description>
        <errorConditionFormula>ISPICKVAL(Cliente__r.Receive_Payment_Type__c,  &quot;Somente Pagamento&quot; ) &amp;&amp;
 ISPICKVAL( Forma_de_Pagamento__c ,&quot;Nota de Crédito&quot;)
 || 
 ISPICKVAL(Cliente__r.Receive_Payment_Type__c, &quot;Somente Abatimento&quot;)   &amp;&amp; 
 ISPICKVAL( Forma_de_Pagamento__c ,&quot;Deposito em Conta&quot;)
 || 
RecordTypeId = &quot;012Q0000000D38G&quot; &amp;&amp; 
ISPICKVAL(Cliente__r.Receive_Payment_Type__c, &quot;Somente Abatimento&quot;)</errorConditionFormula>
        <errorMessage>Cliente não pode receber este  tipo de Pagamento.
Favor verificar no cadastro do cliente qual tipo de pagamento ele pode receber.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>data_do_pagamento_menor_que_30_dias</fullName>
        <active>false</active>
        <description>Se a data do pagamento for menor que 30 dias da data de hoje. ocorrer erro</description>
        <errorConditionFormula>Data_do_Pagamento__c &lt; ( TODAY() + 30)</errorConditionFormula>
        <errorDisplayField>Data_do_Pagamento__c</errorDisplayField>
        <errorMessage>A data do Pagamento deve ser maior que 30 dias da data de hoje.</errorMessage>
    </validationRules>
</CustomObject>